--- a/src/partials/first-block.html
+++ b/src/partials/first-block.html
@@ -3,11 +3,14 @@
         <div class="main-baner-wrap ">
             <div class="main-baner-wrapper cfix ">
                 <div class="item big">
+                    <div class="flag">
+                        <span>BEST</span>
+                    </div>
                     <a href="#">
                         <img src="images/main-baner-1.jpg" alt="">
                     </a>
                 </div>
-                <div class="item">
+                <div class="item cfix">
                     <div class="sub-item">
                         <a href="#">
                             <img src="images/main-baner-2.jpg" alt="">
