--- a/src/sass/adaptation_scss/adaptation_develop_1.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_1.scss
@@ -41,6 +41,16 @@
 
     /* /form */
 
+    /* statistic */
+
+        .statistic-content{
+            .statistic-content-svg{float: none;margin-bottom: 20px;}
+            .statistic-content-logo{bottom:calc(100% - 150px);}
+            .static-content-info{float:none;width: 100%;}
+        }
+
+    /* /statistic */
+
 }
 @media screen and (max-width: 666px){
 
@@ -102,6 +112,35 @@
 
     /* /registration-message */
 
+    /* statistic */
+
+        .statistic-list-main{padding: 20px 20px 25px 20px}
+        .statistic-content{
+            .statistic-content-svg{width: 275px;
+                svg{width: 275px;height: 275px;}
+            }
+            .statistic-content-logo{width:calc(100% - 280px);bottom:calc(100% - 280px);justify-content:flex-end;
+                .statistic-logo-text{max-width: 200px;width: 100%;left: auto;right: 0;font-size: 16px;line-height: 30px;}
+                .satistic-img{max-width: 200px;width: 100%;text-align: center;}
+
+            }
+            .static-content-info{
+                .static-info-title{font-size: 32px;}
+                .static-info-top{
+                    .static-info-top-text{font-size: 28px;}
+                }
+                .statistic-info-bottom{
+                    .statistic-info-bottom-title{font-size: 28px;line-height: 34px;}
+                    .statistic-info-bottom-text{font-size: 28px;line-height: 34px;}
+                }
+                .statistic-info-button{
+                    .button-blue{max-width: 240px;width: 100%;height: 50px;line-height: 50px;font-size: 28px;}
+                }
+            }
+        }
+
+    /* /statistic */
+
 }
 @media screen and (max-width: 479px){
 
@@ -162,6 +201,33 @@
         }
 
     /* /registration-message */
+
+    /* statistic */
+
+        .statistic-content{
+            .statistic-content-svg{width: 150px;
+                svg{width: 130px;height: 130px;}
+            }
+            .statistic-content-logo{width: calc(100% - 150px);bottom:calc(100% - 150px);
+                .statistic-logo-text{max-width: 150px;width: 100%;left: auto;right: 0;font-size: 14px;line-height: 20px;}
+                .satistic-img{max-width: 150px;padding: 0 10px;}
+            }
+            .static-content-info{
+                .static-info-title{font-size: 16px;}
+                .static-info-top{
+                    .static-info-top-text{font-size: 14px;}
+                }
+                .statistic-info-bottom{
+                    .statistic-info-bottom-title{font-size: 14px;line-height: 22px;}
+                    .statistic-info-bottom-text{font-size: 14px;line-height: 18px;}
+                }
+                .statistic-info-button{
+                    .button-blue{max-width: 120px;width: 100%;height: 25px;line-height: 25px;font-size: 14px;}
+                }
+            }
+        }
+
+    /* /statistic */
 
 }
 @media screen and (max-width: 320px){
