--- a/src/partials/statistic-list.html
+++ b/src/partials/statistic-list.html
@@ -9,7 +9,7 @@
         <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg" data-green=1.25 data-blue=1.25>
+                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" data-green=1.25 data-blue=1.25>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
                     <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
@@ -17,8 +17,8 @@
                     <circle class="green-value" cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
                     <circle class="blue-value" cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
 
-                    <text class="green-text"></text>
-                    <text class="blue-text"></text>
+                    <text class="green-text" x=50% y=50% text-anchor="middle"></text>
+                    <text class="blue-text" x=50% y=65% text-anchor="middle"></text>
 
                 </svg>
             </div>
@@ -59,13 +59,16 @@
         <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg" data-green=2.5 data-blue=2.5>
+                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" data-green=2.5 data-blue=2.5>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
                     <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
 
                     <circle class="green-value" cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
                     <circle class="blue-value" cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+
+                    <text class="green-text" x=50% y=50% text-anchor="middle"></text>
+                    <text class="blue-text" x=50% y=65% text-anchor="middle"></text>
 
                 </svg>
             </div>
@@ -106,13 +109,16 @@
         <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg" data-green=3.75 data-blue=3.75>
+                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" data-green=3.75 data-blue=3.75>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
                     <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
 
                     <circle class="green-value" cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
                     <circle class="blue-value" cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+
+                    <text class="green-text" x=50% y=50% text-anchor="middle"></text>
+                    <text class="blue-text" x=50% y=65% text-anchor="middle"></text>
 
                 </svg>
             </div>
@@ -150,13 +156,16 @@
         <div class="statistic-content cfix">
 
             <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg" data-green=5 data-blue=5>
+                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" data-green=5 data-blue=5>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
                     <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
 
                     <circle class="green-value" cx="65" cy="65" r="58" stroke="#a5d000" stroke-width="14" fill="none" />
                     <circle class="blue-value" cx="65" cy="65" r="45" stroke="#336699" stroke-width="8" fill="none" />
+
+                    <text class="green-text" x=50% y=50% text-anchor="middle"></text>
+                    <text class="blue-text" x=50% y=65% text-anchor="middle"></text>
 
                 </svg>
             </div>
