--- a/src/partials/casino-item.html
+++ b/src/partials/casino-item.html
@@ -1,1 +1,106 @@
-<div class="casino-list-wrap" style="height: 1400px;"></div>
+<div class="casino-item">
+    <div class="title-text">
+        <h2>SUPER BONUSES > DOUBLE CASINO </h2>
+    </div>
+    <div class="content">
+        <div class="item-img-wrap">
+            <div class="item-img">
+                <img src="images/casino-item-img.png" alt="">
+            </div>
+            <div class="item-button">
+                <a href="#" class="button-green"><span>PLAY NOW</span></a>
+            </div>
+        </div>
+        <div class="texter">
+            <h5>10 EUR No Deposit Bonus at Super Casino</h5>
+
+            <p><img src="images/flags/Sweden.png" alt=""> Players from your country accepted</p>
+
+            <div class="texter-table">
+                <div class="row">
+                    <div class="td">Bonus Amaunt:</div>
+                    <div class="td">EUR 10</div>
+                </div>
+                <div class="row">
+                    <div class="td">Bonus Code: </div>
+                    <div class="td">CODE</div>
+                </div>
+                <div class="row">
+                    <div class="td">Bonus  Type:</div>
+                    <div class="td">No Deposit Bonus</div>
+                </div>
+                <div class="row">
+                    <div class="td">Valid for:</div>
+                    <div class="td">New Player</div>
+                </div>
+                <div class="row">
+                    <div class="td">Valid Until:</div>
+                    <div class="td">31 Dec 2016</div>
+                </div>
+                <div class="row">
+                    <div class="td">Games Allowed:</div>
+                    <div class="td">All Slots</div>
+                </div>
+                <div class="row">
+                    <div class="td">Wager:</div>
+                    <div class="td">90xB</div>
+                </div>
+            </div>
+
+            <p>General Bonus Information: If you already have an account withPololo Gaming or BetTap - login here and support for youravailable bonus! Full Terms and Conditions apply can be found atBetTap Promotion blog here.</p>
+        </div>
+    </div>
+    <div class="title-text">
+        <h2>RELATED BONUSES</h2>
+    </div>
+    <div class="bonuses-wrap">
+        <div class="item">
+            <a href="#">
+                10 EUR No Deposit Bonus at Super Casino
+            </a>
+            <a href="#">
+                MORE INFO
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                300% Match Bonus at Ruby Slots Casino
+            </a>
+            <a href="#">
+                MORE INFO
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                $25 No Deposit Bonus at Captain Jack Casino
+            </a>
+            <a href="#">
+                MORE INFO
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                10 EUR No Deposit Bonus at Super Casino
+            </a>
+            <a href="#">
+                MORE INFO
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                300% Match Bonus at Ruby Slots Casino
+            </a>
+            <a href="#">
+                MORE INFO
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                $25 No Deposit Bonus at Captain Jack Casino
+            </a>
+            <a href="#">
+                MORE INFO
+            </a>
+        </div>
+    </div>
+</div>
