--- a/src/sass/adaptation_scss/adaptation_develop_4.scss
+++ b/src/sass/adaptation_scss/adaptation_develop_4.scss
@@ -132,6 +132,48 @@
         }
     }
     /*/main-baner*/
+
+    /*casino-item*/
+    .casino-item{
+        .content{}
+        .item-img-wrap{width: 100%;
+            .item-img{margin-bottom: 0;
+                img{position: static;transform: translateX(0);}
+            }
+            .item-button{display: none;
+                .button-green{}
+            }
+        }
+        .texter{width: 100%;padding-left: 0;
+            h5{}
+            p{
+                img{}
+            }
+            .texter-table{padding-top: 15px;
+                .row{}
+                .td{
+                    &:first-child{}
+                    &:last-child{}
+                }
+            }
+        }
+        .bonuses-wrap{
+            .item{}
+            a{text-decoration: underline;
+                &:hover{
+                    &:after{}
+                }
+
+                &:first-child{max-width: 72%;
+                    &:after{display: none;}
+                }
+                &:last-child{
+                    &:after{display: none;}
+                }
+            }
+        }
+    }
+    /*/casino-item*/
 }
 @media screen and (max-width: 767px){
 
@@ -178,6 +220,51 @@
         }
     }
     /*/main-baner*/
+
+    /*bottom-baner*/
+    .bottom-baner{margin:60px 0px;
+    }
+    /*/bottom-baner*/
+
+    /*casino-item*/
+    .casino-item{
+        .content{}
+        .item-img-wrap{
+            .item-img{
+                img{}
+            }
+            .item-button{
+                .button-green{}
+            }
+        }
+        .texter{
+            h5{font-size: 32px;}
+            p{font-size: 28px;line-height: 44px;
+                img{margin-bottom: 11px;}
+            }
+            .texter-table{padding-top: 29px;padding-bottom: 20px;
+                .row{}
+                .td{font-size: 28px;
+                    &:first-child{max-width: 45%;}
+                    &:last-child{max-width: 52%;}
+                }
+            }
+        }
+        .bonuses-wrap{
+            .item{padding: 32px 0px;
+                &:last-child{border-bottom: none;}
+            }
+            a{
+                &:hover{
+                    &:after{}
+                }
+
+                &:first-child{font-size: 32px;}
+                &:last-child{font-size: 20px;}
+            }
+        }
+    }
+    /*/casino-item*/
 }
 @media screen and (max-width: 600px){
     /*main-baner*/
@@ -195,7 +282,46 @@
     /*/main-baner*/
 }
 @media screen and (max-width: 479px){
+    /*casino-item*/
+    .casino-item{
+        .title-text:first-child{line-height: 1.9;}
+        .content{}
+        .item-img-wrap{
+            .item-img{
+                img{}
+            }
+            .item-button{
+                .button-green{}
+            }
+        }
+        .texter{
+            h5{font-size: 16px;}
+            p{font-size: 14px;line-height: 22px;
+                img{margin-bottom: -3px;}
+            }
+            .texter-table{padding-top: 20px;padding-bottom: 10px;
+                .row{}
+                .td{font-size: 14px;
+                    &:first-child{max-width: 45%;}
+                    &:last-child{max-width: 52%;}
+                }
+            }
+        }
+        .bonuses-wrap{
+            .item{padding: 20px 0px;
+                &:last-child{border-bottom: none;}
+            }
+            a{
+                &:hover{
+                    &:after{}
+                }
 
+                &:first-child{font-size: 16px;}
+                &:last-child{font-size: 10px;}
+            }
+        }
+    }
+    /*/casino-item*/
 }
 @media screen and (max-width: 320px){
     /*header*/
@@ -230,4 +356,8 @@
         }
     }
     /*/main-baner*/
+
+    /*bottom-baner*/
+    .bottom-baner{margin:30px 0px;}
+    /*/bottom-baner*/
 }
