statistic-item static added

--- a/src/partials/statistic-item.html
+++ b/src/partials/statistic-item.html
@@ -82,6 +82,10 @@
 
     <div class="static-item-descript cfix static-item-descript-hasImg">
 
+        <div class="list-img">
+            <img src="images/list-img.png" alt="" />
+        </div>
+
         <div class="list">
             <table>
                 <tr>
@@ -141,10 +145,6 @@
                     </td>
                 </tr>
             </table>
-        </div>
-
-        <div class="list-img">
-            <img src="images/list-img.png" alt="" />
         </div>
 
     </div>
@@ -217,6 +217,7 @@
     </div>
 
     <div class="static-item-descript cfix">
+
         <div class="list">
             <table>
                 <tr>
@@ -272,6 +273,16 @@
                 </tr>
             </table>
         </div>
+
+        <div class="list-links">
+            <a href="#" class="button-blue">
+                <span>VISIT CASINO</span>
+            </a>
+            <a href="#" class="button-green">
+                <span>PROMOTIONS</span>
+            </a>
+        </div>
+
     </div>
 
 
