--- a/src/sass/develop_scss/develop_1.scss
+++ b/src/sass/develop_scss/develop_1.scss
@@ -131,7 +131,7 @@
                 .statistic-item-title{font-size: 10px;color:#a5d000;margin-bottom: 5px;font-weight: 700;}
             }
             .statistic-item-rating{width: calc(100% - 150px);
-                .statistic-item-rating-row{margin-bottom: 5px;display: flex;flex-wrap:wrap;font-size: 10px;color:#225383;font-weight: 700;
+                .statistic-item-rating-row{margin-bottom: 5px;display: flex;flex-wrap:wrap;font-size: 10px;color:#225383;font-weight: 700;line-height: 16px;
                     .statistic-item-rating-text{width: 105px;}
                     .statistic-item-rating-value{width: calc(100% - 105px);}
                 }
