--- a/src/partials/statistic-item.html
+++ b/src/partials/statistic-item.html
@@ -56,7 +56,10 @@
 
             <div class="statistic-item-left">
                 <div class="statistic-item-title">RATE CASINO</div>
-                <div class="statistic-item-stars"><!-- here place for your stars, Radick --></div>
+                <div class="statistic-item-stars">
+                    <ul class="rating" id="rating" data-rate="3">
+                    </ul>
+                </div>
             </div>
 
             <div class="statistic-item-rating">
