--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
-
+    <script>
+        //for rating star
+        var ajaxphp = 'ajax.php'
+    </script>
     <!--[if lt IE 10]>
     <link rel="stylesheet" href="https://rawgit.com/codefucker/finalReject/master/reject/reject.css" media="all" />
     <script type="text/javascript" src="https://rawgit.com/codefucker/finalReject/master/reject/reject.min.js"></script>
