--- a/src/sass/develop_scss/develop_2.scss
+++ b/src/sass/develop_scss/develop_2.scss
@@ -65,7 +65,7 @@
 
 /* second-colom */
 .second-block-wrap{ width: 25%; float: left; background-color: #e6e6e6; position: relative;
-    &:after{content: ''; position: absolute; bottom: -100vh; height: 100vh; left: 0; right: 0; background-color: #e6e6e6;z-index: 5;}
+    &:after{content: ''; position: absolute; bottom: -100000px; height: 100000px; left: 0; right: 0; background-color: #e6e6e6;z-index: 5;}
     .conteiner{
         .content{ padding: 20px;
             .top-text{font-size: 12px; font-family: "Arial", sans-serif; color: rgb(101, 101, 101); line-height: 1.2; padding-bottom: 10px; }
@@ -87,7 +87,7 @@
 /* slice-colom */
 
 .slice-wrap{ position: relative; width: 25%; float: left; border-left: 2px solid transparent; background-color: #ffffff;z-index: 10;
-    &:after{content: ''; position: absolute; z-index: 1; left: 0; right: 0; bottom: -100vh; height: 100vh; background-color: white;}
+    &:after{content: ''; position: absolute; z-index: 1; left: 0; right: 0; bottom: -100000px; height: 100000px; background-color: white;}
     .content{ padding: 30px 20px; text-align: center; background-color: white; position: relative;
         p.look-smile{ position: absolute; top: 0; left: 50%; transform: translateX(-50%); height: 50px; width: 80%; font-size: 14px; font-family: "Arial", sans-serif; font-style: italic;  line-height: 1.2; z-index: -1; top: 30%; }
         .bonus-email{
