--- a/src/partials/casino-list.html
+++ b/src/partials/casino-list.html
@@ -5,17 +5,17 @@
         </div>
         <div class="content">
             <div class="item-list">
-                <div class="item">
+                <div class="item" itemprop="author">
                     <div class="left-it">
-                        <img src="images/rg451.png" alt="">
+                        <img src="images/rg451.png" alt="" itemprop="image">
                     </div>
                     <div class="right-it">
-                        <h5>10 EUR No Deposit Bonus at Super Casino</h5>
+                        <h5 itemprop="name" >10 EUR No Deposit Bonus at Super Casino</h5>
                         <p>
                             <img src="images/flag1.png" alt="">
                             <span>Players from your country accepted</span>
                         </p>
-                        <table class="decript">
+                        <table class="decript" itemprop="description">
                             <tr>
                                 <td>Valid for:</td>
                                 <td>New Players</td>
@@ -30,17 +30,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item" itemprop="author">
                     <div class="left-it">
-                        <img src="images/rg451.png" alt="">
+                        <img src="images/rg451.png" alt="" itemprop="image">
                     </div>
                     <div class="right-it">
-                        <h5>10 EUR No Deposit Bonus at Super Casino</h5>
+                        <h5 itemprop="name"> 10 EUR No Deposit Bonus at Super Casino</h5>
                         <p>
                             <img src="images/flag2.png" alt="">
                             <span>Players from your country accepted</span>
                         </p>
-                        <table class="decript">
+                        <table class="decript" itemprop="description">
                             <tr>
                                 <td>Valid for:</td>
                                 <td>New Players</td>
@@ -55,17 +55,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item" itemprop="author">
                     <div class="left-it">
-                        <img src="images/rg451.png" alt="">
+                        <img src="images/rg451.png" alt="" itemprop="image">
                     </div>
                     <div class="right-it">
-                        <h5>10 EUR No Deposit Bonus at Super Casino</h5>
+                        <h5 itemprop="name"> 10 EUR No Deposit Bonus at Super Casino</h5>
                         <p>
                             <img src="images/flag2.png" alt="">
                             <span>Players from your country accepted</span>
                         </p>
-                        <table class="decript">
+                        <table class="decript" itemprop="description">
                             <tr>
                                 <td>Valid for:</td>
                                 <td>New Players</td>
@@ -80,13 +80,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item" itemprop="author">
                     <div class="left-it">
-                        <img src="images/rg452.png" alt="">
+                        <img src="images/rg452.png" alt="" itemprop="image">
                     </div>
                     <div class="right-it">
-                        <h5>Sky Casino | Play Live Casino Games Anywhere</h5>
-                        <p>
+                        <h5 itemprop="name"> Sky Casino | Play Live Casino Games Anywhere</h5>
+                        <p itemprop="description">
                             <span>На странице Fenikss Casino вы сможете сделать выбор из широкого предложения услуг оригинальных игровых автоматов NOVOMATIC. Исключительное право представлять эти автоматы в Латвии есть у Fenikss Casino...</span>
                         </p>
                         <div class="conteiner-buton">
@@ -94,13 +94,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="item">
+                <div class="item" itemprop="author">
                     <div class="left-it">
-                        <img src="images/rg453.png" alt="">
+                        <img src="images/rg453.png" alt="" itemprop="image">
                     </div>
                     <div class="right-it">
-                        <h5>Online Slots - Play Slots on Mobile & Desktop - 5$ K Bonus </h5>
-                        <p>
+                        <h5 itemprop="name"> Online Slots - Play Slots on Mobile & Desktop - 5$ K Bonus </h5>
+                        <p itemprop="description">
                             <span>На странице Fenikss Casino вы сможете сделать выбор из широкого предложения услуг оригинальных игровых автоматов NOVOMATIC. Исключительное право представлять эти автоматы в Латвии есть у Fenikss Casino...</span>
                         </p>
                         <div class="conteiner-buton">
