--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -19,4 +19,4 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
-<body>
+<body itemscope itemtype="http://schema.org/Organization" >
