--- a/src/partials/statistic-item.html
+++ b/src/partials/statistic-item.html
@@ -6,8 +6,8 @@
 
     <div class="statistic-content cfix">
 
-        <div class="statistic-content-svg">
-            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" data-green=2.5 data-blue=2.5>
+        <div class="statistic-content-svg" >
+            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" data-green=2.5 data-blue=2.5 >
 
                 <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
                 <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
@@ -26,15 +26,15 @@
                 <span>new</span>
             </div>
             <div class="satistic-img">
-                <img src="images/statistic-casino-2.png" alt="" />
+                <img src="images/statistic-casino-2.png" alt="" itemprop="image"/>
             </div>
         </div>
 
         <div class="static-content-info">
-            <div class="static-info-title">Super Mega Casino Rewiew</div>
+            <div class="static-info-title" itemprop="name">Super Mega Casino Rewiew</div>
             <div class="static-info-top">
                 <div class="static-info-flag">
-                    <img src="images/flags/Sweden.png" alt="" />
+                    <img src="images/flags/Sweden.png" alt="" itemprop="image"/>
                 </div>
                 <div class="static-info-top-text">Players from your country accepted</div>
             </div>
@@ -62,14 +62,14 @@
                 </div>
             </div>
 
-            <div class="statistic-item-rating">
+            <div class="statistic-item-rating" itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
                 <div class="statistic-item-rating-row">
                     <div class="statistic-item-rating-text">OUR RATING</div>
-                    <div class="statistic-item-rating-value">2.5</div>
+                    <div class="statistic-item-rating-value" itemprop="ratingValue">2.5</div>
                 </div>
-                <div class="statistic-item-rating-row">
+                <div class="statistic-item-rating-row" >
                     <div class="statistic-item-rating-text">PLAYERS RATING</div>
-                    <div class="statistic-item-rating-value">2.5</div>
+                    <div class="statistic-item-rating-value" itemprop="ratingValue">2.5</div>
                 </div>
             </div>
 
@@ -86,10 +86,10 @@
     <div class="static-item-descript cfix static-item-descript-hasImg">
 
         <div class="list-img">
-            <img src="images/list-img.png" alt="" />
+            <img src="images/list-img.png" alt="" itemprop="image" />
         </div>
 
-        <div class="list">
+        <div class="list" itemprop="description">
             <table>
                 <tr>
                     <td>
@@ -157,7 +157,7 @@
     </div>
 
     <div class="static-item-descript cfix">
-        <div class="list">
+        <div class="list" itemprop="description">
             <table>
                 <tr>
                     <td>
@@ -221,7 +221,7 @@
 
     <div class="static-item-descript cfix">
 
-        <div class="list">
+        <div class="list" itemprop="description">
             <table>
                 <tr>
                     <td>
