--- a/src/partials/casino-item.html
+++ b/src/partials/casino-item.html
@@ -5,18 +5,18 @@
     <div class="content">
         <div class="item-img-wrap">
             <div class="item-img">
-                <img src="images/casino-item-img.png" alt="">
+                <img src="images/casino-item-img.png" alt="" itemprop="image">
             </div>
             <div class="item-button">
                 <a href="#" class="button-green"><span>PLAY NOW</span></a>
             </div>
         </div>
         <div class="texter">
-            <h5>10 EUR No Deposit Bonus at Super Casino</h5>
+            <h5 itemprop="name">10 EUR No Deposit Bonus at Super Casino</h5>
 
-            <p><img src="images/flags/Sweden.png" alt=""> Players from your country accepted</p>
+            <p><img src="images/flags/Sweden.png" alt="" itemprop="image"> Players from your country accepted</p>
 
-            <div class="texter-table">
+            <div class="texter-table" >
                 <div class="row">
                     <div class="td">Bonus Amaunt:</div>
                     <div class="td">EUR 10</div>
@@ -47,7 +47,7 @@
                 </div>
             </div>
 
-            <p>General Bonus Information: If you already have an account withPololo Gaming or BetTap - login here and support for youravailable bonus! Full Terms and Conditions apply can be found atBetTap Promotion blog here.</p>
+            <p itemprop="description">General Bonus Information: If you already have an account withPololo Gaming or BetTap - login here and support for youravailable bonus! Full Terms and Conditions apply can be found atBetTap Promotion blog here.</p>
         </div>
     </div>
     <div class="title-text">
