--- a/src/partials/statistic-list.html
+++ b/src/partials/statistic-list.html
@@ -8,8 +8,8 @@
 
         <div class="statistic-content cfix">
 
-            <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" data-green=1.25 data-blue=1.25>
+            <div class="statistic-content-svg" itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating" >
+                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" itemprop="ratingValue" data-green=1.25 data-blue=1.25>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
                     <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
@@ -28,12 +28,12 @@
                     <span>recommended</span>
                 </div>
                 <div class="satistic-img">
-                    <img src="images/statistic-casino-1.png" alt="" />
+                    <img src="images/statistic-casino-1.png" alt="" itemprop="images"/>
                 </div>
             </div>
 
             <div class="static-content-info">
-                <div class="static-info-title">Super Mega Casino Rewiew</div>
+                <div class="static-info-title" itemprop="name">Super Mega Casino Rewiew</div>
                 <div class="static-info-top">
                     <div class="static-info-flag">
                         <img src="images/flags/Sweden.png" alt="" />
@@ -58,8 +58,8 @@
 
         <div class="statistic-content cfix">
 
-            <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" data-green=2.5 data-blue=2.5>
+            <div class="statistic-content-svg" itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
+                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" itemprop="ratingValue" data-green=2.5 data-blue=2.5>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
                     <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
@@ -78,12 +78,12 @@
                     <span>new</span>
                 </div>
                 <div class="satistic-img">
-                    <img src="images/statistic-casino-2.png" alt="" />
+                    <img src="images/statistic-casino-2.png" alt="" itemprop="images"/>
                 </div>
             </div>
 
             <div class="static-content-info">
-                <div class="static-info-title">Super Mega Casino Rewiew</div>
+                <div class="static-info-title" itemprop="name">Super Mega Casino Rewiew</div>
                 <div class="static-info-top">
                     <div class="static-info-flag">
                         <img src="images/flags/Sweden.png" alt="" />
@@ -108,8 +108,8 @@
 
         <div class="statistic-content cfix">
 
-            <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" data-green=3.75 data-blue=3.75>
+            <div class="statistic-content-svg" itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
+                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" itemprop="ratingValue" data-green=3.75 data-blue=3.75>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
                     <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
@@ -125,12 +125,12 @@
 
             <div class="statistic-content-logo">
                 <div class="satistic-img">
-                    <img src="images/statistic-casino-3.png" alt="" />
+                    <img src="images/statistic-casino-3.png" alt="" itemprop="images"/>
                 </div>
             </div>
 
             <div class="static-content-info">
-                <div class="static-info-title">Super Mega Casino Rewiew</div>
+                <div class="static-info-title" itemprop="name">Super Mega Casino Rewiew</div>
                 <div class="static-info-top">
                     <div class="static-info-flag">
                         <img src="images/flags/Sweden.png" alt="" />
@@ -155,8 +155,8 @@
 
         <div class="statistic-content cfix">
 
-            <div class="statistic-content-svg">
-                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" data-green=5 data-blue=5>
+            <div class="statistic-content-svg" itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
+                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 130 130" itemprop="ratingValue" data-green=5 data-blue=5>
 
                     <circle cx="65" cy="65" r="58" stroke="#e6e6e6" stroke-width="14" fill="none" />
                     <circle cx="65" cy="65" r="45" stroke="#e6e6e6" stroke-width="8" fill="none" />
@@ -172,12 +172,12 @@
 
             <div class="statistic-content-logo">
                 <div class="satistic-img">
-                    <img src="images/statistic-casino-1.png" alt="" />
+                    <img src="images/statistic-casino-1.png" alt="" itemprop="images"/>
                 </div>
             </div>
 
             <div class="static-content-info">
-                <div class="static-info-title">Super Mega Casino Rewiew</div>
+                <div class="static-info-title" itemprop="name">Super Mega Casino Rewiew</div>
                 <div class="static-info-top">
                     <div class="static-info-flag">
                         <img src="images/flags/Sweden.png" alt="" />
