--- a/src/partials/third-block-second.html
+++ b/src/partials/third-block-second.html
@@ -5,11 +5,11 @@
         </div>
         <div class="content">
             <div class="top-imageblock">
-                <img src="images/slice1.jpg" alt="">
+                <img src="images/slice1.jpg" alt="" itemprop="image">
             </div>
             <div class="texter">
-                <h5>Online Slots - Play Slots on Mobile & Desktop - 5$ K Bonus </h5>
-                <p>На странице Fenikss Casino вы сможете сделать выбор из широкого предложения услуг оригинальных игровых автоматов На странице Fenikss Casino вы сможете сделать выбор из широкого предложения услуг оригинальных игровых автоматов </p>
+                <h5 itemprop="name" >Online Slots - Play Slots on Mobile & Desktop - 5$ K Bonus </h5>
+                <p itemprop="description">На странице Fenikss Casino вы сможете сделать выбор из широкого предложения услуг оригинальных игровых автоматов На странице Fenikss Casino вы сможете сделать выбор из широкого предложения услуг оригинальных игровых автоматов </p>
                 <div class="convert-butt">
                     <a href="" class="button-green button-now">PLAY NOW</a>
                 </div>
