--- a/src/partials/third-block-third.html
+++ b/src/partials/third-block-third.html
@@ -4,7 +4,7 @@
             <h2>BONUS KATEGORIES</h2>
         </div>
         <div class="content">
-            <div class="lister">
+            <div class="lister" itemprop="category">
                 <ul>
                     <li>
                         <a href="">HOME</a>
